# UR5_zell

./: README.md  population_data.h5
ur5_arm_zell_bringup/: CMakeLists.txt  empty_world_with_ros.world  package.xml
ur5_arm_zell_bringup/config/: controller_configuration.yaml
ur5_arm_zell_bringup/launch/: ur5_robot_control.launch.py
ur5_arm_zell_bringup/rviz/: rviz_setting.rviz
ur5_arm_zell_bringup/scripts/: PublisherCommandGUI.py
ur5_arm_zell_controller_interface/: CMakeLists.txt  package.xml  readme.md  ur5_arm_zell_controller.xml
ur5_arm_zell_controller_interface/config/: robot_controllers_custom.yaml
ur5_arm_zell_controller_interface/include/ur5_arm_zell_controller_interface/: ur5_arm_zell_controller.hpp
ur5_arm_zell_controller_interface/launch/: ur5_arm_with_modified_controller.launch.py
ur5_arm_zell_controller_interface/src/: ur5_arm_zell_controller.cpp
ur5_arm_zell_description/: CMakeLists.txt  README.md  package.xml  visualize_in_rViz2.sh
ur5_arm_zell_description/config/: robot_sensor.yaml
ur5_arm_zell_description/launch/: ur5_arm_load_parameters.launch.py  ur5_arm_visualize.launch.py
ur5_arm_zell_description/rviz/: ur5_arm_zell_visualize.rviz
ur5_arm_zell_description/urdf/: 00_ur5_main.urdf  ur5_control.urdf.xacro  ur5_control_main.urdf.xacro  ur5_gazebo.urdf.xacro  ur5_main.urdf.xacro  ur5_parameters.urdf.xacro  ur5_ros2_control.urdf.xacro  ur5_structure.urdf.xacro  ur5_structure_with_sensor.urdf.xacro  ur5_transmission.urdf.xacro  ur5_visual.urdf.xacro  xacro_file_explane.md
ur5_arm_zell_gazebo/: CMakeLists.txt  README.md  launch.sh  package.xml
ur5_arm_zell_gazebo/launch/: spawn_robot_description.launch.py  spawn_robot_ros2.launch.xml  start_world.launch.py  urdf_visualize.launch.py
ur5_arm_zell_hardware_interface/: CMakeLists.txt  package.xml  ur5_arm_zell_hardware_interface.xml
ur5_arm_zell_hardware_interface/config/: controller_configuration.yaml
ur5_arm_zell_hardware_interface/include/ur5_arm_zell_hardware_interface/: gazebo_ros2_control_plugin.hpp  gazebo_system.hpp  gazebo_system_interface.hpp  ur5_arm_zell_hardware_interface.hpp
ur5_arm_zell_hardware_interface/launch/: bring_up_on_hardware.launch.py
ur5_arm_zell_hardware_interface/src/: ur5_arm_zell_hardware_interface.cpp  ur5_arm_zell_hardware_interface_1.cpp
ur5_arm_zell_machine_learning/: package.xml  setup.cfg  setup.py
ur5_arm_zell_machine_learning/ur5_arm_zell_machine_learning/ForwardKinematics/: forward_kinematics.py
ur5_arm_zell_machine_learning/ur5_arm_zell_machine_learning/GenerticAlgorithm/: GeneticAlgorithm.py  Individual.py  Layer copy.py  Layer.py  Logger.py  NeuralNetwork.py  Population.py  evo_main.py  forward_kinematics.py
ur5_arm_zell_machine_learning/ur5_arm_zell_machine_learning/test_scripts/: monitor.py  plot_data.py  test_action.py
